<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        tools:context="com.example.thenoobydev.csighaziabad.AboutCSIActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#FFF3E0"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About CSI"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!---->

        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#F3E5F5"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The CSI Vision: IT for Masses"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!---->

        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#E1F5FE"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Global affiliations and CSI"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!---->

        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#FFEBEE"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Knowledge Building at CSI"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a4"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!---->

        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#F9FBE7"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Youth and CSI"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!---->

        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#EFEBE9"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:textSize="20dp"
                    android:padding="4dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Events at CSI"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <TextView
                    android:layout_margin="2dp"
                    android:textSize="14dp"
                    android:textColor="#333"
                    android:padding="8dp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a6"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>